/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "VideoFocusModeEnum.proto";
import "VideoFocusReasonEnum.proto";

message VideoFocusRequest {
  optional int32 disp_index = 1;
  required VideoFocusMode.Enum focus_mode = 2;
  required VideoFocusReason.Enum focus_reason = 3;
}
